@@ -2,6 +2,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
 
 
 5.0.3
+  b - TRQ-3235. Fix problem when path to error, output or execution environment
+      contains one or more spaces.
   b - TRQ-3242. Fix problem where resource string argument to prologue
       script getting garbled.
   b - TRQ-3232. Start threadpool at pbs_mom start.
